--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "bootstrap": "^5.3.5",
+        "bootstrap-icons": "^1.11.3",
+        "material-dashboard": "^3.0.9"
     }
 }
