--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
-        "material-dashboard": "^3.0.9"
+        "material-dashboard": "^3.0.9",
+        "perfect-scrollbar": "^1.5.6",
+        "smooth-scrollbar": "^8.8.4"
     }
 }
