--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap-icons": "^1.11.3",
         "material-dashboard": "^3.0.9",
         "perfect-scrollbar": "^1.5.6",
-        "smooth-scrollbar": "^8.8.4"
+        "smooth-scrollbar": "^8.8.4",
+        "toastr": "^2.1.4"
     }
 }
