--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
+        "datatables.net": "^2.3.0",
+        "datatables.net-bs5": "^2.3.0",
+        "datatables.net-dt": "^2.3.0",
+        "jquery": "^3.7.1",
         "material-dashboard": "^3.0.9",
         "perfect-scrollbar": "^1.5.6",
         "smooth-scrollbar": "^8.8.4",
