--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
+        "sass": "^1.89.0",
+        "sass-loader": "^16.0.5",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
     },
@@ -23,8 +25,9 @@
         "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
         "datatables.net": "^2.3.0",
-        "datatables.net-bs5": "^2.3.0",
+        "datatables.net-bs5": "^2.3.1",
         "datatables.net-dt": "^2.3.0",
+        "datatables.net-responsive-bs5": "^3.0.4",
         "jquery": "^3.7.1",
         "material-dashboard": "^3.0.9",
         "perfect-scrollbar": "^1.5.6",
